Part4_Kubernetes/Chapter03/Ch03_03-ingress-alb/k8s-manifests/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
  namespace: test-ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-00bcb2b7bb505ca3e, subnet-0d1a0fe011b100a54
spec:
  rules:
    - http:
        paths:
        - pathType: ImplementationSpecific
          backend:
            service:
              name: service-2048
              port:
                number: 80
